# melofy

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/melofy/: main.py
backend/src/melofy/api/: auth_router.py  music_router.py  upload_router.py  user_router.py
backend/src/melofy/api/handlers/: google_handler.py  music_handler.py  token_handler.py  user_handler.py
backend/src/melofy/auth/: auth_router.py
backend/src/melofy/auth/api/: google_handler.py
backend/src/melofy/auth/schemas/: google_response.py
backend/src/melofy/auth/services/: exceptions.py  google_services.py
backend/src/melofy/core/: auth_tokens.py  config.py  connection.py
backend/src/melofy/db/models/: migrate.py  music_model.py  user_model.py
backend/src/melofy/db/services/: user_services.py
backend/src/melofy/models/: migrate.py  user_model.py
backend/src/melofy/schemas/: exceptions.py  google_response.py  music_schema.py  object_id.py  template_schema.py  token_schema.py  upload_schema.py  user_schema.py
backend/src/melofy/services/: cloudinary_services.py  email_services.py  exceptions.py  google_services.py  mongo_services.py  music_services.py  tag_services.py  user_services.py
backend/src/melofy/upload/: upload_router.py
backend/src/melofy/upload/api/: music_handler.py
backend/src/melofy/utils/: exceptions.py  hash.py  schemas.py  tokens.py  upload.py  youtube.py
backend/src/templates/email/: welcome.html
