[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melofy"
version = "1.0.0"
description = "Your partner to unlimited music."
authors = [
	{name= "Abhinas Regmi", email="contact@abhinasregmi.com.np"}
]
requires-python = ">=3.7"
dependencies = [
	"fastapi",
    "pydantic[email]",
    "uvicorn",
    "gunicorn",
    "httpx",
    "python-dotenv",
    "jinja2",
    "python-multipart",
    "SQLAlchemy",
    "python-jose[cryptography]",
    "pydantic-settings",
    "cloudinary",
    "pymongo"
]